[gd_scene load_steps=34 format=2]

[ext_resource path="res://scripts/gameplay/character.gd" type="Script" id=1]
[ext_resource path="res://models/characters/crash3/idle.anim" type="Animation" id=2]
[ext_resource path="res://sounds/crash/step_dirt1.wav" type="AudioStream" id=3]
[ext_resource path="res://sounds/crash/woah.wav" type="AudioStream" id=4]
[ext_resource path="res://models/characters/crash3/walk-loop.anim" type="Animation" id=5]
[ext_resource path="res://models/characters/crash3/run-loop.anim" type="Animation" id=6]
[ext_resource path="res://models/characters/crash3/jump.anim" type="Animation" id=7]
[ext_resource path="res://sounds/crash/twist.wav" type="AudioStream" id=8]
[ext_resource path="res://sounds/crash/twist_fail.wav" type="AudioStream" id=9]
[ext_resource path="res://models/characters/crash3/jump-move.anim" type="Animation" id=10]
[ext_resource path="res://models/characters/crash3/fall.anim" type="Animation" id=11]
[ext_resource path="res://models/characters/crash3/dash.anim" type="Animation" id=12]
[ext_resource path="res://sounds/crash/foot/normal_2.wav" type="AudioStream" id=13]
[ext_resource path="res://scripts/Character/Step.gd" type="Script" id=14]
[ext_resource path="res://models/characters/crash3/2.mesh" type="ArrayMesh" id=16]
[ext_resource path="res://models/characters/crash-twist/Crash - Spin.mesh" type="ArrayMesh" id=18]
[ext_resource path="res://particles/PPuff.scn" type="PackedScene" id=19]
[ext_resource path="res://sounds/crash/dash.wav" type="AudioStream" id=26]
[ext_resource path="res://sounds/crash/jump.wav" type="AudioStream" id=27]
[ext_resource path="res://icon.png" type="Texture" id=37]
[ext_resource path="res://textures/gameplay/boxes-exicon.png" type="Texture" id=38]
[ext_resource path="res://models/characters/spin.material" type="Material" id=39]
[ext_resource path="res://models/characters/crash.material" type="Material" id=40]
[ext_resource path="res://models/warp/black.material" type="Material" id=43]

[sub_resource type="Skin" id=1]
resource_name = "Skin"
bind_count = 42
bind/0/bone = 0
bind/0/pose = Transform( -1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, -0.0115316 )
bind/1/bone = 1
bind/1/pose = Transform( -0.999829, 0.0185161, 0, 0, 0, -1, -0.0185161, -0.999829, 0, -0.704219, -0.0501146, 0.11339 )
bind/2/bone = 2
bind/2/pose = Transform( -0.74038, 0.672188, 0, 0, 0, 1, 0.672188, 0.74038, 0, -1.38644, -2.72873, -0.593698 )
bind/3/bone = 3
bind/3/pose = Transform( 0.99938, -0.0349593, 0.00406432, 0.0351898, 0.994494, -0.0987029, -0.000591338, 0.0987849, 0.995109, 0.0717695, -2.04164, -0.2028 )
bind/4/bone = 4
bind/4/pose = Transform( -0.758346, 0.65004, 0.0485695, -0.550126, -0.678192, 0.487254, 0.349674, 0.342788, 0.871908, -1.38546, 1.10618, -0.576116 )
bind/5/bone = 5
bind/5/pose = Transform( -0.998394, 0.0540572, 0.0169142, -0.0566245, -0.945265, -0.321353, -0.00138302, -0.321794, 0.946808, -0.706857, 1.38083, 0.0871561 )
bind/6/bone = 6
bind/6/pose = Transform( -0.881238, 0.0166954, -0.472377, -0.472323, 0.00724636, 0.881395, 0.0181381, 0.999834, 0.00149993, -0.644411, -0.288316, -0.113581 )
bind/7/bone = 7
bind/7/pose = Transform( -0.875856, 0.022524, -0.482046, -0.482217, -0.00259982, 0.876048, 0.0184787, 0.999743, 0.0131386, -0.632399, -1.15207, -0.121409 )
bind/8/bone = 8
bind/8/pose = Transform( 0.99821, 0.0586199, 0.0118466, -0.0586199, 0.919801, 0.387981, 0.0118469, -0.38798, 0.921591, -0.217828, -2.81225, 1.2999 )
bind/9/bone = 9
bind/9/pose = Transform( 0.352625, 0.935354, 0.0277071, -0.935726, 0.352189, 0.0194749, 0.0084578, -0.0327934, 0.999426, -4.16443, -1.96354, -0.315512 )
bind/10/bone = 10
bind/10/pose = Transform( 0.361104, 0.932061, 0.0294125, -0.931046, 0.362127, -0.0449075, -0.0525076, -0.0111681, 0.998558, -4.14155, -2.58352, -0.475681 )
bind/11/bone = 11
bind/11/pose = Transform( 1, -3.0268e-08, -5.41234e-15, 6.98492e-09, 1, 1.78814e-07, 1.30385e-08, -3.94649e-16, 1, 0.378827, -4.83828, -1.34893 )
bind/12/bone = 12
bind/12/pose = Transform( -0.733458, 0.679529, 0.0166891, -0.643545, -0.686295, -0.338894, -0.218834, -0.259304, 0.940677, -3.20236, 2.25356, 0.933025 )
bind/13/bone = 13
bind/13/pose = Transform( -0.967617, 0.252421, -3.12924e-07, -0.187878, -0.720199, 0.667843, 0.168578, 0.646217, 0.744302, -2.23758, 2.27654, -1.38908 )
bind/14/bone = 14
bind/14/pose = Transform( -0.996084, 0.0351288, 0.0811314, 0.00986479, -0.867779, 0.496852, 0.087858, 0.495707, 0.864034, -1.80556, 1.89322, -1.21018 )
bind/15/bone = 15
bind/15/pose = Transform( -0.891576, -0.441908, 0.0990372, 0.452338, -0.858373, 0.242045, -0.0219509, 0.2606, 0.965197, -0.763677, 2.2155, -1.0202 )
bind/16/bone = 16
bind/16/pose = Transform( -0.830286, -0.148583, 0.537166, 0.488161, 0.271188, 0.829552, -0.26893, 0.950989, -0.152632, -1.21291, 0.00113296, -2.6149 )
bind/17/bone = 17
bind/17/pose = Transform( -0.733458, -0.679529, -0.0166891, 0.643545, -0.686295, -0.338893, 0.218834, -0.259304, 0.940677, 3.20236, 2.25356, 0.933025 )
bind/18/bone = 18
bind/18/pose = Transform( -0.967617, -0.252422, 2.98023e-07, 0.187878, -0.720199, 0.667844, -0.168578, 0.646217, 0.744302, 2.23758, 2.27654, -1.38908 )
bind/19/bone = 19
bind/19/pose = Transform( -0.996084, -0.0351288, -0.0811314, -0.00986497, -0.867779, 0.496852, -0.0878579, 0.495707, 0.864034, 1.80556, 1.89322, -1.21018 )
bind/20/bone = 20
bind/20/pose = Transform( -0.891576, 0.441908, -0.0990372, -0.452338, -0.858373, 0.242045, 0.0219511, 0.2606, 0.965197, 0.763677, 2.21551, -1.0202 )
bind/21/bone = 21
bind/21/pose = Transform( -0.830286, 0.148583, -0.537166, -0.488161, 0.271188, 0.829552, 0.26893, 0.950989, -0.152632, 1.21291, 0.00113368, -2.6149 )
bind/22/bone = 22
bind/22/pose = Transform( 0.352626, -0.935354, -0.0277071, 0.935726, 0.352189, 0.0194749, -0.00845777, -0.0327935, 0.999426, 4.16443, -1.96354, -0.315512 )
bind/23/bone = 23
bind/23/pose = Transform( 0.361104, -0.932061, -0.0294125, 0.931046, 0.362127, -0.0449074, 0.0525076, -0.0111681, 0.998558, 4.14155, -2.58352, -0.475681 )
bind/24/bone = 24
bind/24/pose = Transform( 1, -3.0268e-08, -5.41234e-15, 6.98492e-09, 1, 1.78814e-07, 1.30385e-08, -3.94649e-16, 1, -0.378827, -4.83828, -1.34893 )
bind/25/bone = 25
bind/25/pose = Transform( 1, 1.29606e-06, 7.02905e-07, 2.38811e-08, -0.475628, 0.879647, 1.49315e-06, -0.879646, -0.475628, 0.00173511, 1.32194, 3.95401 )
bind/26/bone = 26
bind/26/pose = Transform( 0.952205, 0.00123147, -0.305458, 0.30489, -0.0649415, 0.950171, -0.0186668, -0.997888, -0.0622133, 0.355614, -0.864611, 3.92491 )
bind/27/bone = 27
bind/27/pose = Transform( 0.99105, 0.0134479, 0.132812, -0.132902, 0.192788, 0.972198, -0.0125305, -0.981148, 0.19285, -0.371373, -2.22262, 3.4668 )
bind/28/bone = 28
bind/28/pose = Transform( 0.990312, -0.138681, 0.00700351, 0.138851, 0.989502, -0.0400625, -0.00137409, 0.0406469, 0.999173, 0.783119, -4.87453, -0.452495 )
bind/29/bone = 29
bind/29/pose = Transform( 0.985436, -0.17004, -0.00123753, 0.170036, 0.985435, -0.00235926, 0.0016207, 0.0021146, 0.999996, 0.888786, -4.88438, -0.69027 )
bind/30/bone = 30
bind/30/pose = Transform( 0.94685, 0.294422, 0.129579, -0.32064, 0.896136, 0.306807, -0.0257897, -0.332048, 0.94291, -1.60909, -4.69237, 0.744062 )
bind/31/bone = 31
bind/31/pose = Transform( 0.968502, -0.120954, -0.217655, 0.248973, 0.456332, 0.854268, -0.00400419, -0.88155, 0.472073, 0.804301, -3.1488, 3.80953 )
bind/32/bone = 32
bind/32/pose = Transform( -0.758346, -0.65004, -0.0485696, 0.550126, -0.678191, 0.487254, -0.349674, 0.342788, 0.871908, 1.38546, 1.10618, -0.576116 )
bind/33/bone = 33
bind/33/pose = Transform( -0.998394, -0.0540572, -0.0169142, 0.0566247, -0.945265, -0.321353, 0.00138313, -0.321795, 0.946808, 0.706857, 1.38083, 0.0871561 )
bind/34/bone = 34
bind/34/pose = Transform( -0.881238, -0.0166952, 0.472377, 0.472323, 0.00724627, 0.881395, -0.0181381, 0.999834, 0.00149992, 0.644411, -0.288315, -0.113581 )
bind/35/bone = 35
bind/35/pose = Transform( -0.875856, -0.022524, 0.482045, 0.482218, -0.00259991, 0.876048, -0.0184788, 0.999743, 0.0131387, 0.632399, -1.15207, -0.121409 )
bind/36/bone = 36
bind/36/pose = Transform( -0.967617, 0.252422, 0, 0, 0, -1, -0.252422, -0.967617, 0, -2.23758, 0.251476, 1.79969 )
bind/37/bone = 37
bind/37/pose = Transform( -0.74148, 0.670975, 0, 0, 0, -1, -0.670975, -0.74148, 0, -3.196, -2.41581, 1.29146 )
bind/38/bone = 38
bind/38/pose = Transform( -0.967617, -0.252422, 0, 0, 0, -1, 0.252422, -0.967617, 0, 2.23758, 0.251476, 1.79969 )
bind/39/bone = 39
bind/39/pose = Transform( -0.74148, -0.670975, 0, 0, 0, -1, 0.670975, -0.74148, 0, 3.196, -2.41581, 1.29146 )
bind/40/bone = 40
bind/40/pose = Transform( -0.999829, -0.0185161, 0, 0, 0, -1, 0.0185161, -0.999829, 0, 0.704219, -0.0501146, 0.11339 )
bind/41/bone = 41
bind/41/pose = Transform( -0.74038, -0.672188, 0, 0, 0, 1, -0.672188, 0.74038, 0, 1.38644, -2.72873, -0.593698 )

[sub_resource type="GDScript" id=2]
script/source = "extends Spatial


var col:CollisionShape
func _ready():
	connect(\"visibility_changed\",self,\"_on_visible\")
	col = $Area/CollisionShape
	col.disabled = true
	
func _on_visible():
	if visible:
		col.disabled = false
	else:
		col.disabled = true
	pass

func enable_spin(enabled:bool):
	col.disabled = !enabled
"

[sub_resource type="GDScript" id=3]
script/source = "extends Area

func _ready():
	connect(\"body_entered\",self,\"_on_body_entered\")
	
func _on_body_entered(body:Node):
	print(\"attacked: \",str(body.name))
	if (body.is_in_group(\"crate\")):
		body._on_Attacked()
"

[sub_resource type="BoxShape" id=4]
extents = Vector3( 1, 0.289767, 1 )

[sub_resource type="BoxShape" id=5]
extents = Vector3( 0.371487, 0.289515, 0.885153 )

[sub_resource type="BoxShape" id=6]
extents = Vector3( 0.393768, 0.0169715, 0.235733 )

[sub_resource type="GDScript" id=7]
script/source = "extends Area

func get_player() -> Character: return get_parent() as Character
"

[sub_resource type="BoxShape" id=8]
extents = Vector3( 0.51274, 1.21507, 0.475687 )

[sub_resource type="GDScript" id=9]
script/source = "
extends Position3D

export var offset:Vector3
var character:Character
var parent
func _ready():
	character = get_parent()
	parent = character.get_parent()
	character.cam_target = self
	character.call_deferred(\"remove_child\",self)
	parent.call_deferred(\"add_child\",self)

func _process(delta):
	translation = character.get_global_transform().origin + offset
"

[node name="obj_Character" type="KinematicBody" groups=[
"player",
"restart",
]]
collision_layer = 2
collision_mask = 541
script = ExtResource( 1 )
max_speed = 7.0
jump_force = 7
playable = true
is_machine_controlled = false
dash_duration = 0.3
onjump_raycast_to = -0.55
material_black = ExtResource( 43 )

[node name="crashbandicoot" type="Spatial" parent="."]

[node name="Armature" type="Spatial" parent="crashbandicoot"]
transform = Transform( 0.315875, 0, 0, 0, 0.315875, 0, 0, 0, 0.315875, 0, 0.648474, 0 )

[node name="Skeleton" type="Skeleton" parent="crashbandicoot/Armature"]
bones/0/name = "master"
bones/0/parent = -1
bones/0/rest = Transform( -1, 0, 0, 0, 0, 1, 0, 1, 0, 0, -2.04141, 0 )
bones/0/enabled = true
bones/0/bound_children = [  ]
bones/1/name = "legcontroll"
bones/1/parent = 0
bones/1/rest = Transform( 0.999829, 0, 0.0185161, 0, -1, 0, 0.0185161, 0, -0.999829, 0.701998, -0.0501146, 0.114878 )
bones/1/enabled = true
bones/1/bound_children = [  ]
bones/2/name = "legpolel"
bones/2/parent = 1
bones/2/rest = Transform( 0.7527, 0, -0.658364, 0, -1, 0, -0.658364, 0, -0.7527, -0.0515186, -2.77884, -1.24627 )
bones/2/enabled = true
bones/2/bound_children = [  ]
bones/3/name = "base"
bones/3/parent = 0
bones/3/rest = Transform( -0.99938, -0.0351888, 0.000586793, 0.00405968, -0.0987029, 0.995109, -0.0349588, 0.994495, 0.0987847, 0, 0, 2.04141 )
bones/3/enabled = true
bones/3/bound_children = [  ]
bones/4/name = "legtopl"
bones/4/parent = 3
bones/4/rest = Transform( -0.780404, -0.524096, 0.341018, 0.614981, -0.74191, 0.267146, 0.112994, 0.418202, 0.901299, -0.233234, -0.215017, 0.0103953 )
bones/4/enabled = true
bones/4/bound_children = [  ]
bones/5/name = "legl"
bones/5/parent = 4
bones/5/rest = Transform( 0.793089, -0.587127, -0.162145, 0.520824, 0.515641, 0.680336, -0.315835, -0.624016, 0.714739, -1.86265e-08, 0.703021, 2.98023e-08 )
bones/5/enabled = true
bones/5/bound_children = [  ]
bones/6/name = "feetbasel"
bones/6/parent = 5
bones/6/rest = Transform( 0.872736, 0.486865, 0.0359645, 0.185918, -0.263343, -0.946618, -0.451404, 0.832834, -0.320346, -3.1956e-08, 1.31719, 8.90577e-09 )
bones/6/enabled = true
bones/6/bound_children = [  ]
bones/7/name = "feetl"
bones/7/parent = 6
bones/7/rest = Transform( 0.999922, 0.0110807, -0.00579955, -0.0110218, 0.999888, 0.0100967, 0.00591078, -0.010032, 0.999932, -3.72529e-08, 0.857879, -1.35042e-07 )
bones/7/enabled = true
bones/7/bound_children = [  ]
bones/8/name = "chest_head"
bones/8/parent = 3
bones/8/rest = Transform( 0.995591, -0.0891623, 0.0291487, 0.0922547, 0.87438, -0.476392, 0.0169892, 0.47698, 0.87875, 2.00816e-09, 1.05669, -9.56061e-09 )
bones/8/enabled = true
bones/8/bound_children = [  ]
bones/9/name = "earbasel"
bones/9/parent = 8
bones/9/rest = Transform( 0.407153, -0.913175, 0.0183601, 0.850419, 0.386352, 0.357099, -0.333187, -0.12978, 0.933886, -0.309531, 1.60055, -0.0478106 )
bones/9/enabled = true
bones/9/bound_children = [  ]
bones/10/name = "eartopl"
bones/10/parent = 9
bones/10/rest = Transform( 0.999957, 0.00916249, -0.0012946, -0.00905965, 0.997867, 0.0646462, 0.00188416, -0.0646317, 0.997907, -1.03377e-07, 0.607697, -4.00469e-08 )
bones/10/enabled = true
bones/10/bound_children = [  ]
bones/11/name = "eye_browl"
bones/11/parent = 8
bones/11/rest = Transform( 0.99821, 0.05862, 0.0118466, -0.0586199, 0.919802, 0.38798, 0.0118468, -0.38798, 0.921591, -0.296377, 2.18357, 0.661412 )
bones/11/enabled = true
bones/11/bound_children = [  ]
bones/12/name = "shoulderl"
bones/12/parent = 8
bones/12/rest = Transform( -0.692114, -0.686638, -0.222499, 0.674502, -0.725015, 0.139284, -0.256953, -0.0536761, 0.964932, -0.679253, 0.851658, -0.3023 )
bones/12/enabled = true
bones/12/bound_children = [  ]
bones/13/name = "arml"
bones/13/parent = 12
bones/13/rest = Transform( 0.881235, -0.34045, 0.3279, 0.44947, 0.388849, -0.804222, 0.146294, 0.85609, 0.49569, -4.19095e-08, 1.25692, -2.98023e-08 )
bones/13/enabled = true
bones/13/bound_children = [  ]
bones/14/name = "handbasel"
bones/14/parent = 13
bones/14/rest = Transform( 0.972695, -0.228592, 0.040114, 0.216026, 0.95494, 0.203525, -0.0848307, -0.189302, 0.978247, -1.15946e-07, 1.10498, -1.49012e-08 )
bones/14/enabled = true
bones/14/bound_children = [  ]
bones/15/name = "handl"
bones/15/parent = 14
bones/15/rest = Transform( 0.880596, -0.461083, 0.109327, 0.423891, 0.869601, 0.253201, -0.211818, -0.176625, 0.961216, 2.20723e-07, 0.548645, -1.49012e-08 )
bones/15/enabled = true
bones/15/bound_children = [  ]
bones/16/name = "fingerl"
bones/16/parent = 13
bones/16/rest = Transform( 0.765894, -0.403899, 0.500272, 0.621745, 0.266987, -0.73631, 0.163829, 0.874976, 0.455606, -1.15946e-07, 1.10498, -1.49012e-08 )
bones/16/enabled = true
bones/16/bound_children = [  ]
bones/17/name = "shoulderr"
bones/17/parent = 8
bones/17/rest = Transform( -0.772178, 0.598148, 0.214386, -0.588512, -0.800464, 0.113628, 0.239574, -0.0384281, 0.970117, 0.706977, 0.770251, -0.285848 )
bones/17/enabled = true
bones/17/bound_children = [  ]
bones/18/name = "armr"
bones/18/parent = 17
bones/18/rest = Transform( 0.881235, 0.34045, -0.3279, -0.44947, 0.388849, -0.804222, -0.146294, 0.85609, 0.49569, -1.36904e-07, 1.25692, 0 )
bones/18/enabled = true
bones/18/bound_children = [  ]
bones/19/name = "handbaser"
bones/19/parent = 18
bones/19/rest = Transform( 0.972695, 0.228592, -0.0401141, -0.216026, 0.95494, 0.203525, 0.0848307, -0.189302, 0.978247, -4.42637e-08, 1.10498, 6.70552e-08 )
bones/19/enabled = true
bones/19/bound_children = [  ]
bones/20/name = "handr"
bones/20/parent = 19
bones/20/rest = Transform( 0.880596, 0.461083, -0.109327, -0.423891, 0.869601, 0.253201, 0.211818, -0.176625, 0.961216, 1.32248e-07, 0.548645, 0 )
bones/20/enabled = true
bones/20/bound_children = [  ]
bones/21/name = "fingerr"
bones/21/parent = 18
bones/21/rest = Transform( 0.765894, 0.403899, -0.500271, -0.621745, 0.266987, -0.736309, -0.163829, 0.874976, 0.455606, -4.42637e-08, 1.10498, 6.70552e-08 )
bones/21/enabled = true
bones/21/bound_children = [  ]
bones/22/name = "earbaser"
bones/22/parent = 8
bones/22/rest = Transform( 0.296836, 0.954927, 0.00147487, -0.891761, 0.276647, 0.35809, 0.341542, -0.107609, 0.933686, 0.421523, 1.55762, -0.0391344 )
bones/22/enabled = true
bones/22/bound_children = [  ]
bones/23/name = "eartopr"
bones/23/parent = 22
bones/23/rest = Transform( 0.999957, -0.00916243, 0.00129461, 0.00905959, 0.997867, 0.0646462, -0.00188417, -0.0646317, 0.997907, 8.00937e-08, 0.607697, 0 )
bones/23/enabled = true
bones/23/bound_children = [  ]
bones/24/name = "eye_browr"
bones/24/parent = 8
bones/24/rest = Transform( 0.99821, 0.05862, 0.0118466, -0.0586199, 0.919802, 0.38798, 0.0118468, -0.38798, 0.921591, 0.459921, 2.13916, 0.670388 )
bones/24/enabled = true
bones/24/bound_children = [  ]
bones/25/name = "nose_base"
bones/25/parent = 8
bones/25/rest = Transform( 0.99821, -0.0174604, -0.0571979, -0.0586184, -0.0961977, -0.993635, 0.011847, 0.995209, -0.0970491, 0.029683, 1.24387, 0.368008 )
bones/25/enabled = true
bones/25/bound_children = [  ]
bones/26/name = "nose_middle"
bones/26/parent = 25
bones/26/rest = Transform( 0.952204, 0.304891, -0.0186682, -0.269281, 0.866703, 0.419898, 0.144203, -0.394802, 0.907379, 1.17097e-11, 0.518994, 5.70052e-08 )
bones/26/enabled = true
bones/26/bound_children = [  ]
bones/27/name = "nose"
bones/27/parent = 26
bones/27/rest = Transform( 0.90313, -0.423279, -0.0720475, 0.427482, 0.870714, 0.243137, -0.040182, -0.250383, 0.967313, -7.45058e-09, 0.386502, 9.80217e-08 )
bones/27/enabled = true
bones/27/bound_children = [  ]
bones/28/name = "hair_4"
bones/28/parent = 8
bones/28/rest = Transform( 0.980493, 0.196132, 0.0128479, -0.182893, 0.886463, 0.425127, 0.0719918, -0.419184, 0.905042, -0.0238055, 1.84444, -0.390276 )
bones/28/enabled = true
bones/28/bound_children = [  ]
bones/29/name = "hair_3"
bones/29/parent = 8
bones/29/rest = Transform( 0.97369, 0.22747, 0.0135883, -0.214649, 0.895522, 0.389829, 0.0765059, -0.38249, 0.920787, 0.0372, 2.02168, -0.000730178 )
bones/29/enabled = true
bones/29/bound_children = [  ]
bones/30/name = "hair_2"
bones/30/parent = 8
bones/30/rest = Transform( 0.963949, -0.2639, -0.0340379, 0.26558, 0.962098, 0.0619236, 0.0164062, -0.068731, 0.9975, 0.120264, 2.08354, 0.261585 )
bones/30/enabled = true
bones/30/bound_children = [  ]
bones/31/name = "hair_1"
bones/31/parent = 8
bones/31/rest = Transform( 0.9571, 0.285397, -0.050081, -0.252473, 0.736579, -0.627462, -0.142187, 0.613188, 0.777035, 0.10182, 2.10049, 0.384926 )
bones/31/enabled = true
bones/31/bound_children = [  ]
bones/32/name = "legtopr"
bones/32/parent = 3
bones/32/rest = Transform( -0.735349, 0.575475, -0.357898, -0.668354, -0.703193, 0.242536, -0.112098, 0.417551, 0.901713, 0.247792, -0.19808, 0.0101107 )
bones/32/enabled = true
bones/32/bound_children = [  ]
bones/33/name = "legr"
bones/33/parent = 32
bones/33/rest = Transform( 0.793089, 0.587127, 0.162145, -0.520824, 0.515641, 0.680336, 0.315835, -0.624016, 0.714739, 9.31323e-09, 0.703021, 1.49012e-08 )
bones/33/enabled = true
bones/33/bound_children = [  ]
bones/34/name = "feetbaser"
bones/34/parent = 33
bones/34/rest = Transform( 0.872736, -0.486865, -0.0359646, -0.185918, -0.263343, -0.946617, 0.451404, 0.832834, -0.320346, 1.02213e-07, 1.31719, 1.67638e-08 )
bones/34/enabled = true
bones/34/bound_children = [  ]
bones/35/name = "feetr"
bones/35/parent = 34
bones/35/rest = Transform( 0.999922, -0.0110808, 0.0057997, 0.0110219, 0.999888, 0.0100967, -0.00591093, -0.010032, 0.999932, 4.84288e-08, 0.857879, -1.92085e-08 )
bones/35/enabled = true
bones/35/bound_children = [  ]
bones/36/name = "armcontroll"
bones/36/parent = 0
bones/36/rest = Transform( 0.967617, 0, 0.252422, 0, -1, 0, 0.252422, 0, -0.967617, 1.71084, 0.251476, 2.29469 )
bones/36/enabled = true
bones/36/bound_children = [  ]
bones/37/name = "armpolel"
bones/37/parent = 36
bones/37/rest = Transform( 0.886838, 0, 0.462081, 0, 1, 0, -0.462081, 0, 0.886838, 2.08616e-07, 2.66729, -0.822437 )
bones/37/enabled = true
bones/37/bound_children = [  ]
bones/38/name = "armcontrolr"
bones/38/parent = 0
bones/38/rest = Transform( 0.967617, 0, -0.252422, 0, -1, 0, -0.252422, 0, -0.967617, -1.71084, 0.251476, 2.29469 )
bones/38/enabled = true
bones/38/bound_children = [  ]
bones/39/name = "armpoler"
bones/39/parent = 38
bones/39/rest = Transform( 0.886838, 0, -0.462081, 0, 1, 0, 0.462081, 0, 0.886838, -2.08616e-07, 2.66729, -0.822437 )
bones/39/enabled = true
bones/39/bound_children = [  ]
bones/40/name = "legcontrolr"
bones/40/parent = 0
bones/40/rest = Transform( 0.999829, 0, -0.0185161, 0, -1, 0, -0.0185161, 0, -0.999829, -0.701998, -0.0501146, 0.114878 )
bones/40/enabled = true
bones/40/bound_children = [  ]
bones/41/name = "legpoler"
bones/41/parent = 40
bones/41/rest = Transform( 0.7527, 0, 0.658364, 0, -1, 0, 0.658364, 0, -0.7527, 0.0515186, -2.77884, -1.24627 )
bones/41/enabled = true
bones/41/bound_children = [  ]

[node name="AkuHeadPos" type="Position3D" parent="crashbandicoot/Armature/Skeleton" groups=[
"aku_head",
]]
transform = Transform( 3.16581, 0, 0, 0, 3.16581, 0, 0, 0, 3.16581, 0.0321567, 1.45457, 1.66935 )

[node name="Crash" type="MeshInstance" parent="crashbandicoot/Armature/Skeleton"]
transform = Transform( 1.125, 0, 0, 0, 1.125, 0, 0, 0, 1.125, 0, 0.294603, 0 )
use_in_baked_light = true
mesh = ExtResource( 16 )
skin = SubResource( 1 )
blend_shapes/Eye.Hor.L = 0.0
blend_shapes/Eye.Hor.R = 0.0
blend_shapes/Eye.Vert.L = 0.0
blend_shapes/Eye.Vert.R = 0.0
blend_shapes/M.Normal = 0.0
blend_shapes/M.Smile = 0.0
blend_shapes/Tongue = 0.0
material/0 = null
material/1 = null

[node name="twistcrash" type="Spatial" parent="crashbandicoot"]
visible = false
script = SubResource( 2 )

[node name="Crash - Spin" type="MeshInstance" parent="crashbandicoot/twistcrash"]
transform = Transform( 0.00272387, 0, 0, 0, 0.00232592, 0, 0, 0, 0.00288068, 0, 0, 0 )
mesh = ExtResource( 18 )
material/0 = ExtResource( 39 )
material/1 = ExtResource( 40 )

[node name="Area" type="Area" parent="crashbandicoot/twistcrash"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.94023, 0 )
collision_layer = 4096
collision_mask = 556
script = SubResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="crashbandicoot/twistcrash/Area"]
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="crashbandicoot"]
root_node = NodePath("../Armature")
autoplay = "idle"
anims/dash = ExtResource( 12 )
anims/fall = ExtResource( 11 )
anims/idle = ExtResource( 2 )
anims/jump = ExtResource( 7 )
anims/jump-move = ExtResource( 10 )
anims/run-loop = ExtResource( 6 )
anims/walk-loop = ExtResource( 5 )
script = ExtResource( 14 )
sounds = [ NodePath("../Sounds/metal/step_1"), NodePath("../Sounds/metal/step_2"), NodePath("../Sounds/metal/step_3"), NodePath("../Sounds/metal/step_4"), NodePath("../Sounds/metal/step_5") ]

[node name="Sounds" type="Node" parent="crashbandicoot"]

[node name="jump" type="AudioStreamPlayer3D" parent="crashbandicoot/Sounds"]
stream = ExtResource( 27 )
unit_db = 5.0
unit_size = 10.0
max_distance = 500.0

[node name="dash" type="AudioStreamPlayer3D" parent="crashbandicoot/Sounds"]
stream = ExtResource( 26 )
unit_db = 5.0
unit_size = 10.0
max_distance = 500.0

[node name="spin" type="AudioStreamPlayer3D" parent="crashbandicoot/Sounds"]
stream = ExtResource( 8 )
unit_db = 5.0
unit_size = 10.0
max_distance = 500.0

[node name="spin_fail" type="AudioStreamPlayer3D" parent="crashbandicoot/Sounds"]
stream = ExtResource( 9 )
unit_db = 5.0
unit_size = 10.0
max_distance = 500.0

[node name="step_1" type="AudioStreamPlayer3D" parent="crashbandicoot/Sounds"]
stream = ExtResource( 3 )
unit_db = 3.0
unit_size = 5.0
max_distance = 500.0

[node name="step_2" type="AudioStreamPlayer3D" parent="crashbandicoot/Sounds"]
stream = ExtResource( 13 )
unit_db = 3.0
unit_size = 5.0
max_distance = 500.0

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.878521, 0 )
shape = SubResource( 5 )

[node name="Feet" type="Area" parent="."]
collision_layer = 256
collision_mask = 256

[node name="CollisionShape" type="CollisionShape" parent="Feet"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00185171, 0 )
shape = SubResource( 6 )

[node name="Head" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.80014, 0 )
collision_layer = 256
collision_mask = 256

[node name="CollisionShape" type="CollisionShape" parent="Head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00185171, 0 )
shape = SubResource( 6 )

[node name="AkuPos" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.08183, 1.41054, 0 )

[node name="sfx" type="Node" parent="."]

[node name="twist" type="AudioStreamPlayer3D" parent="sfx"]
stream = ExtResource( 8 )
unit_db = 5.0
unit_size = 10.0
max_distance = 500.0

[node name="twist_fail" type="AudioStreamPlayer3D" parent="sfx"]
stream = ExtResource( 9 )
unit_db = 5.0
unit_size = 10.0
max_distance = 500.0

[node name="death_woah" type="AudioStreamPlayer3D" parent="sfx"]
stream = ExtResource( 4 )
unit_db = 5.0
unit_size = 10.0
max_distance = 500.0

[node name="ItemBody" type="Area" parent="."]
collision_layer = 2048
collision_mask = 4
script = SubResource( 7 )

[node name="CollisionShape" type="CollisionShape" parent="ItemBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.12689, 0 )
shape = SubResource( 8 )

[node name="PPuff" parent="." instance=ExtResource( 19 )]

[node name="Rays" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.21132 )

[node name="RayCast" type="RayCast" parent="Rays"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.469601, -0.0725006 )
enabled = true
collision_mask = 529
collide_with_areas = true

[node name="RayCast2" type="RayCast" parent="Rays"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.395806, 0.469601, -0.446412 )
enabled = true
collision_mask = 529
collide_with_areas = true

[node name="RayCast3" type="RayCast" parent="Rays"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.394766, 0.469601, -0.448264 )
enabled = true
collision_mask = 529
collide_with_areas = true

[node name="RayCast4" type="RayCast" parent="Rays"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.392767, 0.469601, 0.0153928 )
enabled = true
collision_mask = 529
collide_with_areas = true

[node name="RayCast5" type="RayCast" parent="Rays"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.390652, 0.469601, 0.0153928 )
enabled = true
collision_mask = 529
collide_with_areas = true

[node name="CamTarget" type="Position3D" parent="."]
script = SubResource( 9 )
offset = Vector3( 0, 3, -5 )

[node name="Sprite3D" type="Sprite3D" parent="CamTarget"]
transform = Transform( 0.136366, 0, 0, 0, 0.136366, 0, 0, 0, 0.136366, 0, 0, 0 )
visible = false
billboard = 1
texture = ExtResource( 37 )

[node name="PosFuture" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3.16122 )

[node name="Sprite3D" type="Sprite3D" parent="PosFuture"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.27895, 0 )
billboard = 1
texture = ExtResource( 38 )
[connection signal="animation_finished" from="crashbandicoot/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_entered" from="Feet" to="." method="_on_Feet_area_entered"]
[connection signal="area_entered" from="Head" to="." method="_on_Head_area_entered"]
[connection signal="area_entered" from="ItemBody" to="." method="_on_ItemBody_area_entered"]
